# AMP

./: .gitignore  .rosinstall  .rosinstall.bak  README.md  install_amp.sh
Arlo_Files/: ReadMe
Arlo_Files/.arlobot/: per_robot_settings_for_propeller_c_code.h
Arlo_Files/.arlobot/rosmaps/: per_robot_settings_for_propeller_c_code.h
Arlo_Files/PropellerCodeForArloBot/: ROSInterfaceForArloBotWithDHB10.c
Arlo_Files/PropellerCodeForArloBot/cmm/: ROSInterfaceForArloBotWithDHB10.binary  ROSInterfaceForArloBotWithDHB10.elf
amp/: CMakeLists.txt  package.xml
amp/launch/: kinect.launch  localization.launch  mapping.launch  mapping_real.launch  rosbag_load.launch  rosbag_save.launch
arlo files/: dwa_local_planner_params.yaml  per_robot_settings_for_propeller_c_code.h  turtlebot_properties.urdf.xacro
launch/: CMakeLists.txt  amcl_navigation.launch  arlo_localization.launch  arlo_mapping.launch  arlo_navigation.launch  camera.launch  hand_localization.launch  keyboard.launch  kinect_only.launch  localization.launch  map_update.launch  mapping.launch  navigation.launch  rosbag_load.launch  rtabmap_mapping.launch  rviz.launch  rviz_2d.launch  rviz_3d.launch  save_map.launch  xarlo_mapping.launch
launch/arlo files/: ROSInterfaceForArloBotWithDHB10.c
launch/config/: 2d.rviz  3d.rviz  3d_mapping.rviz  obes_rtab.rviz  turtlebot_navigation.rviz
launch/launch/: kinect_only.launch  mapping_real.launch
launch/launch/config/: point_cloud2.rviz
launch/rosbag/: rosbag_save.launch
local_mapping/: CMakeLists.txt  package.xml
local_mapping/src/: local_mapping_node.cpp
(+8 files in other folders)
